<resources>
    <string name="app_name">Notifications Expo</string>
    <string name="send">Invia</string>
    <string name="insert_message">Inserisci un messaggio</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_bubble_activity">Bubble Activity</string>
    <string name="istructions">Istruzioni</string>
    <string name="settings">Impostazioni</string>
    <string name="credits">Crediti</string>
    <string name="c_name_img">Notifica Immagine</string>
    <string name="c_descr_img">Questa è la descrizione del canale per le notifiche con immagine</string>
    <string name="c_name_multiple">Multiple Notification</string>
    <string name="c_descr_multiple">Questa è la descrizione del canale per le Multiple Notification</string>
    <string name="c_name_conversation">Conversation Notifications</string>
    <string name="c_descr_conversation">Questa è la descrizione del canale per le Conversation Notifications</string>
    <string name="c_name_expandable">Expandable Notification</string>
    <string name="c_descr_expandable">Questa è la descrizione del canale per le Expandable Notification</string>
    <string name="c_name_media">Media Control</string>
    <string name="c_descr_media">Questa è la descrizione del canale per i MediaControl</string>
    <string name="c_name_bubbles">Chat Bubbles</string>
    <string name="c_descr_bubbles">Questa è la descrizione del canale per le Chat Bubbles</string>
    <string name="c_name_service">Processi in background</string>
    <string name="c_descr_service">Questa è la descrizione del canale per i processi in background</string>
    <string name="c_name_custom">Custom Notification</string>
    <string name="c_descr_custom">Questa è la descrizione del canale per le Custom Notification</string>
    <string name="e_notification_content">Seleziona una risposta rapida:</string>
    <string name="e_notification_content_no_selection">Seleziona una risposta rapida oppure tocca ANNULLA:</string>
    <string name="c_notication_info"> Espandi per dettagli</string>
    <string name="text_cb_1">Ciao!</string>
    <string name="text_cb_2">Come stai?</string>
    <string name="text_cb_3">Sono impegnato non disturbarmi!</string>
    <string name="text_cb_4">Sto arrivando!</string>
    <string name="b_invia">INVIA</string>
    <string name="b_annulla">ANNULLA</string>
    <string name="reply_text">Scrivi la tua risposta...</string>
    <string name="reply_button_text">RISPONDI</string>
    <string name="settings_text_seconds">Cambia i secondi di attesa per la risposta automatica</string>
    <string name="settings_text_1">Cambia la modalità con cui l\'app mostra le notifiche</string>
    <string name="settings_button_1">Vai alle impostazioni di sitema</string>
    <string name="settings_text_2">Elimina i dati di questa app</string>
    <string name="settings_button_2">Elimina i dati di questa app</string>
    <string name="settings_alert_dialog_title">Conferma azione</string>
    <string name="settings_alert_dialog_message">Sei veramente sicuro di voler eliminare tutti i dati dell\'app?

L\'operazione è irreversibile
    </string>
    <string name="settings_alert_dialog_button">Conferma</string>
    <string name="settings_alert_dialog_button2">Annulla</string>
    <string name="credits_title">NotificationExpo (v. 1.0)</string>
    <string name="credits_text1">BARUSCO MANUEL</string>
    <string name="credits_text2">DA RE ALBERTO</string>
    <string name="credits_text3">GREGORI SIMONE</string>

    <string name="welcome0_text0">Benvenuto in Notifications Expo</string>
    <string name="welcome0_text1">Questa è un\'app scritta da sviluppatori per sviluppatori</string>
    <string name="welcome0_text2">L\'obiettivo è fornire una panoramica di ciò che è possibile fare con le notifiche di Android 11</string>
    <string name="welcome0_text3">Scorrere per iniziare</string>
    <string name="welcome1_text0">Si ha a disposizione un elenco di chat virtuali, ciascuna associata a un particolare tipo di notifica che si può lanciare</string>
    <string name="welcome1_text1">Cliccare su una chat per iniziare</string>
    <string name="welcome2_text0">Ogni chat ha un messaggio preimpostato che fornisce alcune brevi istruzioni su come funziona quel determinato tipo di notifica</string>
    <string name="welcome2_text1">Scrivere un testo casuale, premere invia e uscire subito dall\'app per ricevere una notifica</string>
    <string name="welcome3_text0">Di default le notifiche vengono lanciate dopo 2 secondi dall\'invio del messaggio</string>
    <string name="welcome3_text1">È possibile modificare questo tempo dalle impostazioni</string>
    <string name="welcome4_text0">Questa app è progettata per funzionare sia su smartphone che su tablet</string>
    <string name="welcome4_text1">Cliccare su "INIZIA" per iniziare</string>
    <string name="expandable_notification">Ciao, ti manderò una notifica espandibile entro qualche secondo. Una notifica espandibile è una notifica che può essere visualizzata interamente facendo uno swipe verso il basso.</string>
    <string name="image_notification">Ciao, ti manderò una notifica espandibile con una immagine entro qualche secondo. Una notifica con immagine è una notifica che in versione compatta presenta una miniatura del contenuto inviato ed in versione estesa visualizza l\'immagine intera.</string>
    <string name="bubble_notification">Ciao, per attivare una Chat Bubble inviami un messaggio. Entro qualche secondo ti invierò una risposta tramite una Conversation Notification per attivare la Bubble tocca il pulsante sotto il messaggio oppure imposta la priorità massima sulla mia notifica così la Chat Bubble comparirà di default. Una volta attivata ed espansa puoi scrivermi da lì</string>
    <string name="multiple_notifications">Ciao, ti manderò una notifica multipla entro qualche secondo. Una notifica multipla è un\'unica notifica che raggruppa al suo interno più notifiche. Ti trovi in una chat di gruppo, quindi più messaggi inviati dai componenti del gruppo verranno raggruppati in quest\'unica notifica la quale è espandibile</string>
    <string name="custom_notifications">Ciao, ti manderò una notifica custom entro qualche secondo. Con le notifiche custom è possibile definite un layout personalizzato sia per la notifica non espansa sia per quella espansa. Quando arriverà il messaggio espandi la notifica così potrai scegliere tra quattro risposte</string>
    <string name="conversation_notifications">Ciao, ti manderò una Conversation Notification entro qualche secondo. Una Conversation Notification è una notifica particolare creata apposta per i messaggi delle chat che rimane sempre in cima nel panello delle notifiche in una sezione apposita</string>
    <string name="media_control_notification">Ciao, per attivare la notifica Media Control mandami un messaggio. Non è necessario uscire dall\'app ma bisogna cliccare sull\'icona Play del messaggio che ti manderò. Per terminare la riproduzione dell\'audio clicca sul pulsante Stop della notifica</string>
    <string name="background_process_notification">Ciao, ti manderò la notifica di un processo in background entro qualche secondo. Questo tipo di notifica serve ad indicare all\'utente l\'esecuzione di un processo in background come il download di una risorsa ecc. In questo caso vedrai l\'esecuzione di un semplice download di una foto </string>
    <string name="quick_actions_notification">Ciao, ti manderò una notifica che permette di rispondere direttamente da essa. Ricorda che, se mi risponderai dalla notifica, io ti scriverò di nuovo sempre dopo 2 secondi</string>

    <string-array name="dummy_messages">
        <item>Ciao</item>
        <item>Ok</item>
        <item>Come stai?</item>
        <item>😁😁</item>
        <item>😂😂</item>
        <item>👍👍</item>
        <item>Scrivimi un messaggio così ti rispondo</item>
        <item>Scrivimi qualcosa</item>
        <item>Buongiorno</item>
        <item>Sto aspettando che tu mi scriva qualcosa ...</item>
        <item>Va bene</item>
        <item>Grazie!</item>
        <item>A presto!</item>
        <item>Cosa stai facendo?</item>
        <item>Buongiorno</item>
    </string-array>

    <string-array name="long_dummy_messages">
        <item>Questo è un messaggio molto lungo, il quale non ci sta all\'interno di una notifica collapsed, infatti per visualizzare interamente il suo contenuto c\'è bisogno di una notifica espandibile, sul quale l\'utente può effetturare uno swipe per espanderla</item>
    </string-array>
    <string name="channel_audio_notifications_name">Player musicale</string>
    <string name="channel_audio_notifications_name_description">Canale per le notifiche del player musicale</string>

    <string name="message_audio_received">Audio ricevuto</string>
    <string name="text_audio_chat">Audio</string>
    <string name="welcome_button_next">Avanti</string>
    <string name="welcome_button_back">Indietro</string>
    <string name="welcome_button_start">Inizia</string>
</resources>