<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_1"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>
    <Button
        android:id="@+id/button_go_system_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_1"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_seconds"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:valueFrom="2"
        android:valueTo="30"
        android:stepSize="2"
        android:layout_marginBottom="20dp"
        app:tickColorActive="@color/design_default_color_primary"
        app:tickColorInactive="@color/cardview_shadow_end_color"/> <!--Imposto il colore dei tick uguale a quella della barra così non si vedono -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_text_2"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/button_delete_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_button_2"/>

</LinearLayout>