<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center">

    <ImageView
        android:id="@+id/credits_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ContentDescription" />
    <TextView
        android:id="@+id/credits_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:text="@string/credits_title"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/credits_icon"
        android:layout_marginStart="30dp"
        android:layout_alignBaseline="@id/credits_icon"/>
    <TextView
        android:id="@+id/credits_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_text1"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/credits_icon"
        android:layout_marginTop="20dp"
        android:layout_below="@id/credits_icon"/>
    <TextView
        android:id="@+id/credits_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_text2"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/credits_icon"
        android:layout_marginTop="20dp"
        android:layout_below="@id/credits_text1"/>
    <TextView
        android:id="@+id/credits_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits_text3"
        android:textColor="@color/black"
        android:layout_toEndOf="@id/credits_icon"
        android:layout_marginTop="20dp"
        android:layout_below="@id/credits_text2"/>
</RelativeLayout>