<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/welcome_background_A">

    <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/welcome0_text0"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp" />

    <ImageView
        android:id="@+id/imageView0"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
        android:src="@drawable/image_chat4" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/welcome0_text1"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:text="@string/welcome0_text2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:text="@string/welcome0_text3"
        android:layout_marginBottom="50dp"
        android:textSize="18sp"
        android:gravity="bottom"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:textColor="@color/black"/>

</LinearLayout>